--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
-	"name": "lupecz/calculator",
+	"name": "michaelakarkosova/calculator",
 	"description": "",
 	"keywords": [],
 	"license": "proprietary",
 	"require": {
-		"php": "^7.4"
-	},
+		"php": "^7.4",
+      "ext-gmp": "*"
+    },
 	"require-dev": {
 		"nette/tester": "^2.4",
 		"roave/security-advisories": "dev-latest"
@@ -15,15 +16,12 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"LupeCz\\Calculator\\": "src/"
-		},
-		"files": [
-			"functions.php"
-		]
+			"MichaelaKarkosova\\Calculator\\": "src/"
+		}
 	},
 	"autoload-dev": {
 		"psr-4": {
-			"LupeCz\\Calculator\\Tests\\": "tests/"
+			"MichaelaKarkosova\\Calculator\\Tests\\": "tests/"
 		}
 	}
 }
